@@ -79,6 +79,7 @@ public class TextViewerWindow {
     });
 
     shell.pack();
+	Utils.centreWindow( shell );
     shell.open();
     while (!shell.isDisposed())
       if (!display.readAndDispatch()) display.sleep();
